test/compile_errors/err_label_cross_closure_boundary.w
//! expect-check-fail: label cannot cross function, closure, or async boundary

fn main:
    var flag = true
    'outer while flag:
        let f = () => break 'outer
        flag = false
